--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 main {
     display: flex;
     flex-flow: column; 
-    background: linear-gradient(#d0d0dd, #6a70d8);  
+    background: linear-gradient(#6a70d8,#fafafa); 
 }
 
 h1 {
@@ -22,18 +22,26 @@ h1 {
 .hanoi {
     display: flex;
     flex-flow: row wrap; 
-    background: linear-gradient(#6a70d8); 
     justify-content: space-around;
     height: 35vh;
     margin-top: 30%;
 }
 
 .torres {
+    position: absolute;
+    bottom: 0px;
+    left:-55px;
     display: flex;
     flex-flow: column-reverse;
     align-items: center;
-    width: 20px;
-    background-image: url(img/torreMadeira.jpeg);
+    width: 125px;
+    height: 100%;
+}
+
+.palito {
+    position: relative;
+    background-image: url("img/torreMadeira.jpeg") ;
+    width : 15px;
 }
 
 .torres:hover {
@@ -44,13 +52,6 @@ h1 {
     border: 1px solid #fafafa;
     box-shadow: 2px 2px 10px #ccc;
 }
-
-/* .hidden {
-    visibility: hidden;
-    width: 20vw;
-    height: 35vh;
-    background-color: blue;
-} */
 
 .discos {
     height: 35px;
@@ -93,4 +94,8 @@ h1 {
 
     h1 {font-size: 50px; padding: 10px 0;}
 
+}
+
+@media (max-width: 320px) {
+    main {width: 100vw;}
 }
