--- a/style.css
+++ b/style.css
@@ -83,6 +83,16 @@ h1 {
     background-image: url(img/borda.jpg);
 }
 
+.contadorMovimento {
+    width: 100px;
+    font-size: 20px;
+    color: #fafafa;
+    background-color: #323232;
+    text-align: center;
+    padding: 5px;
+    margin: 10% auto;
+}
+
 @media (min-width: 768px) {
     .hanoi {margin-top: 15%;}
 }
@@ -93,6 +103,8 @@ h1 {
     .hanoi {margin-top: 13%;}
 
     h1 {font-size: 50px; padding: 10px 0;}
+
+    .contadorMovimento {margin: 5% auto;}
 
 }
 
